k8s/production/nextjs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: production
spec:
  selector:
    app: nextjs-crud
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
